4.5 -> 5.0:
    - jbj: clean up rpmpkg memory leaks.
    - jbj: functional queries of *.xar packages, on to payload.
    - jbj: lash up rpmwf implicit iteration for Lead/Signature/Header reads.
    - jbj: add rpmwf getter/setter to FD_t for now.
    - jbj: add --xar to read *.xar for now, magic later.
    - jbj: txar.c: use rpmwfFoo from -lrpmdb.
    - jbj: hotwire -lxar linkage for the moment.
    - jbj: add proof-of-concept rpmwf "wrapper format" to rpmdb.
    - jbj: move rpmReadHeader from lib/package.c to rpmdb/pkgio.c.
    - jbj: remove HGE_t casts everywhere.
    - jbj: hmmm, rpm-perl seems to have issues on BIGENDIAN non-int32 retrieves.
    - jbj: use HE_t instead of individual args. dunno HGE_t et al desired ...
    - jbj: eek, rpm-perl not being built here.
    - rpm.org: Change strntoul to using size_t for sizes.
    - rpm.org: Remove refs to "file/src".
    - rpm.org: Clarify rpm manpage wrt rpmbuild binary vs package (rhbz#233232).
    - rpm.org: Clarify rpmtsCheck() documentation (rhbz#159638).
    - rpm.org: Remove bunch of unnecessary rpmio_internal includes.
    - jbj: include rpmtag.h, not rpmlib.h, if only tag names are needed.
    - jbj: change int_32 to evrFlags and uint32_t in rpmfc.c and rpmds.c.
    - rpm.org: Remove two unnecessary legacy.h includes.
    - rpm.org: Remove bunch of unnecessary misc.h includes, document others.
    - rpm.org: Remove useless "var" parameter from setup helpers.
    - rpm.org: Remove dead & unused RPMTAG_ARCHIVESIZE addition code ...
    - rpm.org: Remove rpmSetMachine() from API.
    - jbj: hmmm, headerGetExtension should not leak memory on failure. hack it.
    - jbj: more memory leak canoodling.
    - jbj: plug a couple of memory leaks.
    - jbj: rearrange the steaming piles of ick into an aesthetic constellation.
    - jbj: squeaky clean SSL memory cleanup. Ick.
    - rpm.org: start hiding rpmsq internals.
    - jbj: fix: "trade a double free for a modest memory leak for the moment."